--- a/demo/vertical.html
+++ b/demo/vertical.html
@@ -39,6 +39,8 @@
     <div class="container vertical">
         <div class="item" style="background-color: lightcoral">
             <h2>1</h2>
+            <p>This is the second tallest item</p>
+            <p>Or the second shortest item</p>
         </div>
         <div class="item" style="background-color: lightblue">
             <h2>2</h2>
