Fix build issue for browser version, try and add ARIA roles

--- a/demo/index.html
+++ b/demo/index.html
@@ -1531,7 +1531,7 @@
     }
     window.addEventListener('resize', function() { fw = getFW(ww); });
     </script> 
-    <script src="../dist/min/tiny-slider.js"></script> 
+    <script src="../dist/tiny-slider.js"></script>
     <script>
 
     // <script type="module">
